Improvements to course functionality
