# src/main/java/com/mishchuk/onlineschool/controller/dto/CourseUpdateDto.java
@@ -3,6 +3,10 @@ package com.mishchuk.onlineschool.controller.dto;
 public record CourseUpdateDto(
                 String name,
                 String description,
+                java.math.BigDecimal price,
+                java.math.BigDecimal discountAmount,
+                Integer discountPercentage,
+                Integer accessDuration,
                 String status,
                 java.util.List<java.util.UUID> moduleIds) {
 }
